<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.ui.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/splash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_size_3"
        android:text="@string/click_on_the_screen_to_reveal_the_status"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/file_name_label"
        style="@style/DetailLabel"
        android:layout_width="@dimen/spacing_size_15"
        android:layout_height="wrap_content"
        android:text="@string/detail_file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash" />

    <TextView
        android:id="@+id/file_name_value"
        style="@style/DetailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_name_label"
        app:layout_constraintTop_toBottomOf="@id/splash" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="file_name_label,file_name_value" />

    <TextView
        android:id="@+id/status_label"
        style="@style/DetailLabel"
        android:layout_width="@dimen/spacing_size_15"
        android:layout_height="wrap_content"
        android:text="@string/detail_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/status_value"
        style="@style/DetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/status_label"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <Button
        android:id="@+id/ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_size_3"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>