<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/main_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/spacing_size_4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_size_3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_size_3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/spacing_size_3" />

    <ImageView
        android:id="@+id/cloud_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_size_23"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/cloud_image"
        android:src="@drawable/ic_cloud_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guideline" />

    <TextView
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_size_3"
        app:layout_constraintTop_toBottomOf="@id/cloud_image" />

    <RadioGroup
        android:id="@+id/selected_opt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/barrier">

        <RadioButton
            android:id="@+id/radio_glide"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_glide" />

        <RadioButton
            android:id="@+id/radio_starter"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_loadapp" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_retrofit" />
    </RadioGroup>

    <com.udacity.customview.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_size_8"
        app:initialColour="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:textButton="@string/button_name" />

</androidx.constraintlayout.motion.widget.MotionLayout>